# property-based-testing-workshop

./: .ghci  LICENSE  README.md  pbt.cabal
src/: Advanced.hs  Basics.hs  Generators.hs  Patterns.hs  Placeholder.hs  Practice.hs  StateMachine.hs
test/: test.hs
test/Test/: Advanced.hs  Basics.hs  Generators.hs  Patterns.hs  Practice.hs  SimpleGen.hs  StateMachine.hs
