name: pbt
version: 0.0.1
synopsis: Property based testing workshop.
homepage: https://github.com/markhibberd/property-based-testing
license:  BSD3
license-file: LICENSE
author: Mark Hibberd
maintainer: mark@hibberd.id.au
category: Testing
build-type: Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  build-depends:
      base >= 4.10 && < 5
    , aeson == 1.*
    , text == 1.*

  hs-source-dirs:
    src

  exposed-modules:
    Advanced
    Basics
    Generators
    Patterns
    Practice
    StateMachine

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends:
      base >= 4.10 && < 5
    , hedgehog == 0.6.*
    , aeson == 1.*
    , pbt
    , text == 1.*

  other-modules:
    Test.Advanced
    Test.Basics
    Test.Generators
    Test.Patterns
    Test.Practice
    Test.SimpleGen
    Test.StateMachine
